# safe-link-visual-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAYMCP_SUBMISSION.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: container.yml
deploy/: kakao-cloud.md
scripts/: build_image.sh  create_playmcp_cover.py  create_submission_bundle.sh  inspect_playmcp.sh  smoke_test.py  verify_local.sh
src/safelink_mcp/: __init__.py  asgi.py  digest.py  inspector.py  models.py  render.py  safety.py  server.py  tool_contract.py
tests/: test_playmcp_contract.py  test_safety.py
