[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-link-visual-mcp"
version = "0.1.0"
description = "MCP server that classifies link safety and returns a square visual digest image."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "mcp[cli]>=1.28.1,<1.29",
  "pillow>=10.3",
  "playwright>=1.45",
  "pydantic>=2.7",
  "starlette>=0.37",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[project.scripts]
safe-link-mcp = "safelink_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
